Respect change in l3keys2e interface that renamed .value_required: to .value_required:n.

--- a/TODO
+++ b/TODO
@@ -14,6 +14,8 @@ TODO
 * Check default dim keys for right format
 * Convert all png images in documentation to TikZ images
 * Check naming conventions for local and global variables
+* Check required package versions
+* Check compile warnings
 
 
 
