--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -1079,6 +1079,46 @@
 \cs_generate_variant:Nn \subfiglist_is_integer:nTF { V }
 
 
+% Test whether token list is a positive integer
+\prg_new_conditional:Npnn \subfiglist_is_positive_integer:n #1 { p, T, F, TF }
+%
+% #1: Token list
+%
+{
+  \bool_if:nTF
+  {
+    \bool_lazy_and_p:nn { \subfiglist_is_integer_or_empty_p:n { #1 } } { \int_compare_p:nNn { #1 } > { 0 } }
+  }{
+    \prg_return_true:
+  }{
+    \prg_return_false:
+  }
+}
+
+% Define variants of \subfiglist_is_positive_integer expanding its argument twice
+\cs_new:Npn \subfiglist_is_positive_integer_p:t #1
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_positive_integer_p:n { #1 }
+}
+\cs_new:Npn \subfiglist_is_positive_integer:tT #1 #2
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_positive_integer:nT { #1 } { #2 }
+}
+\cs_new:Npn \subfiglist_is_positive_integer:tF #1 #2
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_positive_integer:nF { #1 } { #2 }
+}
+\cs_new:Npn \subfiglist_is_positive_integer:tTF #1 #2 #3
+{
+  \subfiglist_exp_args:Nt \subfiglist_is_positive_integer:nTF { #1 } { #2 } { #3 }
+}
+
+\cs_generate_variant:Nn \subfiglist_is_positive_integer_p:n { V }
+\cs_generate_variant:Nn \subfiglist_is_positive_integer:nT  { V }
+\cs_generate_variant:Nn \subfiglist_is_positive_integer:nF  { V }
+\cs_generate_variant:Nn \subfiglist_is_positive_integer:nTF { V }
+
+
 % Test whether token list is a float or empty
 \prg_new_conditional:Npnn \subfiglist_is_float_or_empty:n #1 { p, T, F, TF }
 %
@@ -1198,7 +1238,7 @@
 % #1: Token to be tested
 %
 {
-  \subfiglist_is_integer_p:V #1
+  \subfiglist_is_positive_integer_p:V #1
 }
 
 \cs_new:Npn \subfiglist_tokenize_is_at_p:V #1
@@ -1743,7 +1783,7 @@
   %
   {
     % Check if first argument is numeric
-    \subfiglist_is_integer:nTF { ##2 }
+    \subfiglist_is_positive_integer:nTF { ##2 }
     {
       \subfiglist_tl_set_wrapped:Nn \subfiglist_tmpa_tl { ##2 }
       \tl_put_right:NV \subfiglist_canvas_nums_tl \subfiglist_tmpa_tl
@@ -1798,7 +1838,7 @@
 %
 {
   % Check if first argument is numeric
-  \subfiglist_is_integer:nTF { #2 }
+  \subfiglist_is_positive_integer:nTF { #2 }
   {
     \subfiglist_tl_set_wrapped:Nn \subfiglist_tmpa_tl { #2 }
     \tl_put_right:NV \subfiglist_canvas_nums_tl \subfiglist_tmpa_tl
