--- a/TODO
+++ b/TODO
@@ -14,6 +14,7 @@ TODO
 * Check naming conventions for local and global variables
 * Check required package versions
 * Check compile warnings
+* Control catcodes when splitting strings
 
 
 
